Bug fix
